# job-screener

./: .gitignore  CHANGELOG.md  CHANGELOG.public.md  CLAUDE.md  GIT_WORKFLOW.md  README.md  analyzer.py  app.py  cli.py  config.env.template  cv_parser.py  database.py  delete_user.py  deploy.sh  fetcher.py  gitignore  main.py  push-public.sh  pyproject.toml  restart.sh  run.sh  scraper.py  server.sh  setup_git.sh  start.sh  stop.sh
docs/superpowers/plans/: 2026-05-06-background-analysis-banner.md  2026-05-07-reality-check.md  2026-06-20-cli-tui.md  2026-06-20-dashboard-hero-dotgrid.md  2026-06-21-cli-tui-v2.md
docs/superpowers/specs/: 2026-05-06-analytics-redesign.md  2026-05-06-history-table-redesign.md  2026-06-20-cli-tool-design.md  2026-06-20-cli-tui-design.md  2026-06-20-dashboard-hero-dotgrid-design.md  2026-06-21-cli-tui-v2-design.md  2026-07-06-cv-upload-design.md
static/: style.css
templates/: about.html  analytics.html  base.html  changelog.html  dashboard.html  discover.html  history.html  job_detail.html  job_partial.html  login.html  register.html  settings.html  statistics.html
tests/: conftest.py  test_analysis_endpoints.py  test_analytics.py  test_analyzer.py  test_analyzer_prompt.py  test_cli_filter_match.py  test_cli_filter_shortcuts.py  test_cli_status.py  test_cv_parser.py  test_cv_tailoring.py  test_cv_upload.py  test_database.py  test_fetcher_ssrf.py  test_interview_prep.py  test_merge_dashboard_history.py  test_password.py  test_reality_check.py  test_scraper_ssrf.py  test_security.py
(+13 files in other folders)
