[project]
name = "job-screener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.3",
    "flask-wtf>=1.2.2",
    "flask-limiter>=3.9.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
    "rich>=13.9.4",
    "textual>=6.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
